--- a/pom.xml
+++ b/pom.xml
@@ -1,110 +1,72 @@
-<!DOCTYPE project [
-        <!ELEMENT project (modelVersion|groupId|artifactId|version|dependencies|build)*>
-        <!ATTLIST project
-                xmlns CDATA #REQUIRED
-                xmlns:xsi CDATA #REQUIRED
-                xsi:schemaLocation CDATA #REQUIRED>
-        <!ELEMENT modelVersion (#PCDATA)>
-        <!ELEMENT groupId (#PCDATA)>
-        <!ELEMENT artifactId (#PCDATA)>
-        <!ELEMENT version (#PCDATA)>
-        <!ELEMENT dependencies (dependency)*>
-        <!ELEMENT dependency (groupId|artifactId|version|scope)*>
-        <!ELEMENT scope (#PCDATA)>
-        <!ELEMENT build (plugins)*>
-        <!ELEMENT plugins (plugin)*>
-        <!ELEMENT plugin (groupId|artifactId|version|configuration)*>
-        <!ELEMENT configuration (source|target)*>
-        <!ELEMENT source (#PCDATA)>
-        <!ELEMENT target (#PCDATA)>
-        ]>
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
-
-
     <groupId>com.example</groupId>
-
     <artifactId>selenium-basic-pom</artifactId>
-
     <version>1.0-SNAPSHOT</version>
 
-
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
     <dependencies>
-
         <!-- Selenium WebDriver dependency -->
-
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>4.17.0</version> <!-- Update if needed -->
+            <version>4.17.0</version>
         </dependency>
 
-
-
-
-        <!-- TestNG dependency -->
-
-        <dependency>
-
-            <groupId>org.testng</groupId>
-
-            <artifactId>testng</artifactId>
-
-            <version>7.5</version>
-
-            <scope>test</scope>
-
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>RELEASE</version>
-            <scope>compile</scope>
-        </dependency>
+        <!-- JUnit 5 for testing -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>RELEASE</version>
-            <scope>compile</scope>
+            <version>5.10.1</version>
+            <scope>test</scope>
         </dependency>
 
+        <!-- WebDriverManager for automatic driver management -->
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.6.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
-
-
     <build>
-
         <plugins>
-
             <!-- Maven Compiler Plugin -->
-
             <plugin>
-
                 <groupId>org.apache.maven.plugins</groupId>
-
                 <artifactId>maven-compiler-plugin</artifactId>
-
-                <version>3.8.1</version>
-
+                <version>3.11.0</version>
                 <configuration>
-
-                    <source>1.8</source>
-
-                    <target>1.8</target>
-
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
-
             </plugin>
 
+            <!-- Maven Surefire Plugin for running tests -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <includes>
+                        <include>**/*Test.java</include>
+                        <include>**/Test*.java</include>
+                        <include>**/*Tests.java</include>
+                        <include>**/HelloSelenium.java</include>
+                    </includes>
+                </configuration>
+            </plugin>
         </plugins>
-
     </build>
-
 </project>
